SFUSA/force-app/main/default/objects/GBS_Country_to_Center__mdt/fields/Country_Name__c.field-meta.xml
<CustomField>
        <fullName>Country_Name__c</fullName>
        <description>The full name of the country.</description>
        <label>Country Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>