SFUSA/force-app/main/default/objects/GBS_Country_to_Center__mdt/fields/GBS_Center_Abbreviation__c.field-meta.xml
<CustomField>
        <fullName>GBS_Center_Abbreviation__c</fullName>
        <description>Two-letter abbreviation of the GBS Center.</description>
        <label>GBS Center Abbreviation</label>
        <length>2</length>
        <type>Text</type>
    </CustomField>