SFUSA/force-app/main/default/objects/GBS_Country_to_Center__mdt/fields/GBS_Center_Full_Name__c.field-meta.xml
<CustomField>
        <fullName>GBS_Center_Full_Name__c</fullName>
        <description>Full-length name of the GBS Center.</description>
        <label>GBS Center Full Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>